--- a/Design/Home.html
+++ b/Design/Home.html
@@ -12,6 +12,7 @@
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
     <script src="design.css"></script>
     <script src="design.js"></script>
+    <div></div>
     <title>Home</title>
 </head>
 
