--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -18,15 +18,15 @@
 
 <body>
     <section style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size:100%;background-position: center">
-        <div style="background-color: rgba(0, 0, 0, 0.267);">
+        <div style="background-color: rgba(0, 0, 0, 0.13);">
 
 
             <div class="container">
                 <div class="row align-items-center" style="min-height: 700px;">
-                    <div class="col-8">
-                        <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #aa1808;font-size: 10rem;">U</span>fit.</h1>
+                    <div class="col-6">
+                        <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #de1700;font-size: 10rem;">U</span>fit.</h1>
                         <hr class="">
-                        <p class="text-white pb-0">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
+                        <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
                     </div>
 
                 </div>
