--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -15,6 +15,47 @@
 </head>
 
 <body>
+    <section class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                    <h1 style="text-align:center">Features</h1>
+            </div>
+        </div>
+        <hr>
+        <div class="row py-5">
+            <div class="col-lg-6">
+                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
+            </div>
+            <div class="col-lg-6">
+                <h3>Weight Tracking</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
+                </p>
+            </div>
+        </div>
+        <div class="row py-5">
+            <div class="col-lg-6">
+                <h3>Set Goals</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
+                </p>
+            </div>
+            <div class="col-lg-6">
+                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
+            </div>
+        </div>
+        <div class="row py-5">
+            <div class="col-lg-6">
+                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
+            </div>
+            <div class="col-lg-6">
+                <h3>Exercise and food tracking</h3>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
+                </p>
+            </div>
+        </div>
+    </section>
     <footer class="bg-dark text-white">
         <div class="container">
             <div class="pt-3">
