--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -30,7 +30,7 @@
 
             <div class="container">
                 <div class="row align-items-center " style="min-height: 100vh;">
-                    <div class="col-6 p-3" style="">
+                    <div class="col-6 p-3">
                         <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #de1700;font-size: 10rem;">U</span>fit.</h1>
                         <hr class="">
                         <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
