--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -16,6 +16,30 @@
 </head>
 
 <body>
+    <nav class="navbar navbar-light bg-light fixed-top">
+        <div class="container">
+            <span class="navbar-brand mb-0 h1"><span style="color: #de1700;">U</span>fit.</span>
+        </div>
+    </nav>
+    <section style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size: cover;background-position: center">
+        <div style="background-color: rgba(0, 0, 0, 0);">
+
+            <h1>This is the home page</h1>
+    
+
+            <div class="container">
+                <div class="row align-items-center " style="min-height: 100vh;">
+                    <div class="col-6 p-3">
+                        <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #de1700;font-size: 10rem;">U</span>fit.</h1>
+                        <hr class="">
+                        <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
+                        <a href="" class="btn btn-block text-white" style="background-color: #de1700;">Let's start</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </section>
     <section class="container">
         <div class="row">
             <div class="col-lg-12">
