--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -11,59 +11,67 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
     <link rel="stylesheet" href="../source/design.css">
-    <script src="../source/design.js"></script>
-    <title>U Fit</title>
+    <script src="design.js"></script>
+    <title>Home</title>
+
 </head>
 
 <body>
-    <section class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                    <h1 style="text-align:center">Features</h1>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem;"><b>U</b></span>fit.</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <div class="row w-100">
+                    <div class="col-md-10  ">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Testimonials</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link" href="#">Login</a>
+                            </li>
+                            <li class="nav-item float-right">
+                                <a class="nav-link" href="#">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <li class="fa fa-bell fa-2x nav-icon"></li>
+                        <li class="fa fa-user fa-2x ml-3 nav-icon"></li>
+                    </div>
+
+                </div>
+                </span>
+            </div>
+    </nav>
+    <section id="banner" style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size: cover;background-position: center">
+        <div style="background-color: rgba(0, 0, 0, 0);">
+            <div class="container">
+                <div class="row align-items-center " style="min-height: 100vh;">
+                    <div class="col-6 p-3" style="">
+                        <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #de1700;font-size: 10rem;">U</span>fit.</h1>
+                        <hr class="">
+                        <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
+                        <a href="" class="btn btn-block text-white" style="background-color: #de1700;">Let's start</a>
+                    </div>
+
+                </div>
             </div>
         </div>
-        <hr>
-        <div class="row py-5">
-            <div class="col-lg-6">
-                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
-            </div>
-            <div class="col-lg-6">
-                <h3>Weight Tracking</h3>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
-                </p>
-            </div>
-        </div>
-        <div class="row py-5">
-            <div class="col-lg-6">
-                <h3>Set Goals</h3>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
-                </p>
-            </div>
-            <div class="col-lg-6">
-                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
-            </div>
-        </div>
-        <div class="row py-5">
-            <div class="col-lg-6">
-                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
-            </div>
-            <div class="col-lg-6">
-                <h3>Exercise and food tracking</h3>
-                <p>
-                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
-                </p>
-            </div>
-        </div>
+
     </section>
-    <section>
-        <div class=" row text-center align-items-center">
-
-        </div>
-    </section>
-
-
     <footer class="bg-dark text-white">
         <div class="container">
             <div class="pt-3">
