--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -17,17 +17,47 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-light bg-light fixed-top">
+    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <span class="navbar-brand mb-0 h1"><span style="color: #de1700;">U</span>fit.</span>
-        </div>
+            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem;"><b>U</b></span>fit.</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <div class="row w-100">
+                    <div class="col-md-10  ">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Features</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Testimonials</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Contact Us</a>
+                            </li>
+                            <li class="nav-item ">
+                                <a class="nav-link" href="#">Login</a>
+                            </li>
+                            <li class="nav-item float-right">
+                                <a class="nav-link" href="#">Sign Up</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="col-md-2">
+                        <li class="fa fa-bell fa-2x nav-icon"></li>
+                        <li class="fa fa-user fa-2x ml-3 nav-icon"></li>
+                    </div>
+
+                </div>
+                </span>
+            </div>
     </nav>
-    <section style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size: cover;background-position: center">
+    <section id="banner" style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size: cover;background-position: center">
         <div style="background-color: rgba(0, 0, 0, 0);">
-
-    <h1>This is the home page</h1>
-   
-
             <div class="container">
                 <div class="row align-items-center " style="min-height: 100vh;">
                     <div class="col-6 p-3" style="">
