--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -60,7 +60,7 @@
         <div style="background-color: rgba(0, 0, 0, 0);">
             <div class="container">
                 <div class="row align-items-center " style="min-height: 100vh;">
-                    <div class="col-6 p-3" style="">
+                    <div class="col-6 p-3">
                         <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #de1700;font-size: 10rem;">U</span>fit.</h1>
                         <hr class="">
                         <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
@@ -71,7 +71,7 @@
             </div>
         </div>
 
-</section>
+    </section>
     <section class="container">
         <div class="row">
             <div class="col-lg-12">
@@ -110,6 +110,37 @@
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
                 </p>
+            </div>
+        </div>
+    </section>
+
+    <section class="container">
+        <div class="row pt-5">
+            <div class="col-lg-12">
+                <h1 style="text-align: center">Contact Us</h1>
+            </div> 
+        </div>
+        <hr class="pb-5">
+        <div class="form-row">
+            <div class="form-group col-lg-6">
+                <label>Full Name</label>
+                <input class="form-control" id="input_name" placeholder="Firstname Lastname">
+            </div>
+            <div class="form-group col-lg-6">
+                <label>Email</label>
+                <input type="email" class="form-control" id="input_email" placeholder="example@example.com">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-lg-6">
+                <label>Subject</label>
+                <input class="form-control" id="input_subject" placeholder="subject">
+            </div>
+        </div>
+        <div class="form-row">
+            <div class="form-group col-lg">
+                <label>Message</label>
+                <textarea class="form-control" id="input_message" rows=6></textarea>
             </div>
         </div>
     </section>
