--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -31,7 +31,7 @@
                                 <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
+                                <a class="nav-link" href="#features">Features</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Testimonials</a>
@@ -57,7 +57,7 @@
             </div>
     </nav>
     <section id="banner" style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size: cover;background-position: center">
-        <div style="background-color: rgba(0, 0, 0, 0);">
+        <div style="background-color: rgba(0, 0, 0, 0.164);">
             <div class="container">
                 <div class="row align-items-center " style="min-height: 100vh;">
                     <div class="col-6 p-3" style="">
@@ -71,43 +71,43 @@
             </div>
         </div>
 
-</section>
-    <section class="container">
-        <div class="row">
+    </section>
+    <section id="features" class="container">
+        <div class="row pt-5">
             <div class="col-lg-12">
-                    <h1 style="text-align:center">Features</h1>
+                <h1 style="text-align:center">Features</h1>
             </div>
         </div>
         <hr>
-        <div class="row py-5">
+        <div class="row py-5 align-items-center">
             <div class="col-lg-6">
-                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
+                <img src="https://via.placeholder.com/300x200" width="100%" class="img-fluid" alt="placeholder">
             </div>
             <div class="col-lg-6">
                 <h3>Weight Tracking</h3>
-                <p>
+                <p class="text-justify ">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
                 </p>
             </div>
         </div>
-        <div class="row py-5">
+        <div class="row py-5  align-items-center">
             <div class="col-lg-6">
                 <h3>Set Goals</h3>
-                <p>
+                <p class="text-justify">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
                 </p>
             </div>
             <div class="col-lg-6">
-                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
+                <img src="https://via.placeholder.com/300x200" width="100%" class="img-fluid" alt="placeholder">
             </div>
         </div>
-        <div class="row py-5">
+        <div class="row py-5  align-items-center">
             <div class="col-lg-6">
-                <img src="https://via.placeholder.com/300x200" width="400" class="img-fluid" alt="placeholder">
+                <img src="https://via.placeholder.com/300x200" width="100%" class="img-fluid" alt="placeholder">
             </div>
             <div class="col-lg-6">
                 <h3>Exercise and food tracking</h3>
-                <p>
+                <p class="text-justify">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt, velit modi facere non sapiente aperiam omnis commodi perspiciatis voluptatem saepe. Maxime amet dolore deserunt sed minima harum ea laborum cumque.
                 </p>
             </div>
@@ -137,7 +137,6 @@
                         <i class="fa fa-user-plus" aria-hidden="true"></i>
                         <a href="" class="text-white ml-3">Sign Up</a>
                     </div>
-
                     <div class="text-right">
                         <i class="fab fa-facebook-square fa-2x pl-2" aria-hidden="true"></i>
                         <i class="fab fa-linkedin fa-2x pl-2" aria-hidden="true"></i>
