--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -92,10 +92,10 @@
     </section>
 
     <section id="features" class="container">
-        <div class="row pt-5">
+        <div class="row pt-5 text-center">
 
             <div class="col-lg-12">
-                <h1 style="text-align:center">Features</h1>
+                <h1>Features</h1>
             </div>
         </div>
         <hr>
@@ -185,35 +185,38 @@
     </section>
 
 
-    <section class="container">
+    <section class="container pb-3">
         <div class="row pt-5">
             <div class="col-lg-12">
                 <h1 style="text-align: center">Contact Us</h1>
             </div>
         </div>
         <hr class="pb-5">
-        <div class="form-row">
-            <div class="form-group col-lg-6">
-                <label>Full Name</label>
-                <input class="form-control" id="input_name" placeholder="Firstname Lastname">
+        <form>
+            <div class="form-row">
+                <div class="form-group col-lg-6">
+                    <label>Full Name</label>
+                    <input class="form-control" id="input_name" placeholder="Firstname Lastname">
+                </div>
+                <div class="form-group col-lg-6">
+                    <label>Email</label>
+                    <input type="email" class="form-control" id="input_email" placeholder="example@example.com">
+                </div>
             </div>
-            <div class="form-group col-lg-6">
-                <label>Email</label>
-                <input type="email" class="form-control" id="input_email" placeholder="example@example.com">
+            <div class="form-row">
+                <div class="form-group col-lg-6">
+                    <label>Subject</label>
+                    <input class="form-control" id="input_subject" placeholder="subject">
+                </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-lg-6">
-                <label>Subject</label>
-                <input class="form-control" id="input_subject" placeholder="subject">
+            <div class="form-row">
+                <div class="form-group col-lg">
+                    <label>Message</label>
+                    <textarea class="form-control" id="input_message" rows=6></textarea>
+                </div>
             </div>
-        </div>
-        <div class="form-row">
-            <div class="form-group col-lg">
-                <label>Message</label>
-                <textarea class="form-control" id="input_message" rows=6></textarea>
-            </div>
-        </div>
+            <button class="btn btn-danger">Send</button>
+        </form>
     </section>
     <footer class="bg-dark text-white">
         <div class="container">
