--- a/Design/pages/header.html
+++ b/Design/pages/header.html
@@ -19,16 +19,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
-        <style>
-            .nav-icon {
-                font-weight: 200;
-                font-size: large;
-            }
-        </style>
+    <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
+    <style>
+        .nav-icon {
+            font-weight: 200;
+            font-size: large;
+        }
+    </style>
 
 
-    </head>
+</head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -68,8 +68,8 @@
                         <li class="fa fa-user fa-2x ml-3 nav-icon"></li>
                     </div>
                 </div>
-                </span>
             </div>
+        </div>
     </nav>
 </body>
 
