--- a/Design/pages/Landing.html
+++ b/Design/pages/Landing.html
@@ -37,7 +37,7 @@
                                 <a class="nav-link" href="#testimonials">Testimonials</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
+                                <a class="nav-link" href="#Contact-Us">Contact Us</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link " data-toggle="modal" data-target="#login-modal" href="#">Login</a>
@@ -157,7 +157,7 @@
     </section>
 
 
-    <section class="container pb-3">
+    <section id="Contact-Us" class="container pb-3">
         <div class="row pt-5">
             <div class="col-lg-12">
                 <h1 style="text-align: center">Contact Us</h1>
@@ -257,7 +257,7 @@
 
                             <input type="password" class="form-control" placeholder="password" aria-label="password" aria-describedby="basic-addon1">
                         </div>
-                        <button type="button" class="btn btnn-primary text-white btn-block">Login</button>
+                        <a type="button" href="./Home.html" class="btn btnn-primary text-white btn-block">Login</a>
                         <div class="row pt-2">
                             <div class="col-md-6"><a href="">Creat new account</a></div>
                             <div class="col-md-6 text-right"><a href="">Forgot your password?</a></div>
