--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -17,68 +17,61 @@
 </head>
 
 <body>
-    <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem;"><b>U</b></span>fit.</span>
+            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem"><b>U</b></span>fit.</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <div class="row w-100">
-                    <div class="col-md-10  ">
+                    <div class="col-md-8 ">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Features</a>
+                                <a class="nav-link" href="./Home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Testimonials</a>
+                                <a class="nav-link" href="./Goals.html">Goals</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Contact Us</a>
+                                <a class="nav-link" href="./food.html">Food</a>
                             </li>
-                            <li class="nav-item ">
-                                <a class="nav-link" href="#">Login</a>
-                            </li>
-                            <li class="nav-item float-right">
-                                <a class="nav-link" href="#">Sign Up</a>
+                            <li class="nav-item">
+                                <a class="nav-link" href="./exercise.html">Exercise</a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="col-md-2">
-                        <li class="fa fa-bell fa-2x nav-icon"></li>
-                        <li class="fa fa-user fa-2x ml-3 nav-icon"></li>
-                    </div>
 
-                </div>
-                </span>
-            </div>
-    </nav>
-    <section id="banner" style="background:url(file:///C:/Users/f3student18/Downloads/body-clouds-cloudy-skies-460524.jpg);;background-repeat:no-repeat;background-size: cover;background-position: center">
-        <div style="background-color: rgba(0, 0, 0, 0);">
-            <div class="container">
-                <div class="row align-items-center " style="min-height: 100vh;">
-                    <div class="col-6 p-3">
-                        <h1 class="mb-0" style="font-family:Verdana, Geneva, Tahoma, sans-serif; font-weight: 800; font-size: 4rem"><span style="color: #de1700;font-size: 10rem;">U</span>fit.</h1>
-                        <hr class="">
-                        <p class="text-white text-justify pb-0" style="font-size: 1rem">Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae odio officiis blanditiis in excepturi! Deserunt voluptas odio eum ullam, dolore culpa error consequuntur placeat aut sequi non modi earum facere?</p>
-                        <a href="" class="btn btn-block text-white" style="background-color: #de1700;">Let's start</a>
                     </div>
+                    <div class="col-md-4">
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <b>Atif Mehmood</b>
+                                <li class="fa fa-user ml-3 nav-icon"></li>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="./Landing.html">Logout</a>
+                                <a class="dropdown-item" href="./profile.html">Profile</a>
+                            </div>
+                        </div>
 
+                    </div>
                 </div>
             </div>
         </div>
-
+    </nav>
+    <section class="container">
+        <h1>This is homepage</h1>
     </section>
-    <footer class="bg-dark text-white">
+    <footer class=" text-white">
         <div class="container">
             <div class="pt-3">
-                <img src="https://via.placeholder.com/140x100" width="50" height="50" class="img-responsive" />
+                <span class="navbar-brand mb-0 h1"><span id="logo-u"><b>U</b></span>fit.</span>
             </div>
             <div class='row pt-4'>
-                <div class="col-lg-6 ">
+                <div class="col-lg-6">
 
                     <div class="footer-item">
                         <li class="fas fa-envelope"></li><span>email@email.com</span>
@@ -90,17 +83,16 @@
                 <div class="col-lg-6">
                     <div class="footer-item">
                         <i class="fa fa-sign-in" aria-hidden="true"></i>
-                        <a href="" class="text-white ml-3"> Login</a>
-                    </div>
-                    <div class="footer-item">
-                        <i class="fa fa-user-plus" aria-hidden="true"></i>
-                        <a href="" class="text-white ml-3">Sign Up</a>
+                        <a href="./Landing.html" class="text-white ml-3">
+                                    Logout</a>
                     </div>
 
                     <div class="text-right">
-                        <i class="fab fa-facebook-square fa-2x pl-2" aria-hidden="true"></i>
+                        <i class="fab fa-facebook-square fa-2x
+                                                    pl-2" aria-hidden="true"></i>
                         <i class="fab fa-linkedin fa-2x pl-2" aria-hidden="true"></i>
-                        <i class="fab fa-twitter-square fa-2x pl-2" aria-hidden="true"></i>
+                        <i class="fab fa-twitter-square fa-2x
+                                                    pl-2" aria-hidden="true"></i>
                     </div>
                 </div>
             </div>
@@ -108,7 +100,7 @@
 
             <hr class="footer-hr">
             <div class="text-center credits pb-2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe blanditiis libero fuga fugiat minus necessitatibus expedita eligendi deleniti, enim itaque voluptate neque? Explicabo iure doloremque sequi accusantium! Dignissimos, mollitia alias!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
             </div>
 
     </footer>
