--- a/Design/pages/profile.html
+++ b/Design/pages/profile.html
@@ -6,17 +6,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
     <link rel="stylesheet" href="../source/design.css">
     <script src="design.js"></script>
@@ -25,73 +18,94 @@
 </head>
 
 <body>
-    <div class="container">
-            <span><span style="color: #de1700;  font-size:4em"><b>Profile</b></span>page</span>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container">
+            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem"><b>U</b></span>fit.</span>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+            <div class="collapse navbar-collapse" id="navbarText">
+                <div class="row w-100">
+                    <div class="col-md-10  ">
+                        <ul class="navbar-nav">
+                            <li class="nav-item active">
+                                <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Home</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Goals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Food</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Exercise</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Recipes</a>
+                            </li>
+                        </ul>
+
+                    </div>
+                    <div class="col-md-2">
+                        <li class="fa fa-bell nav-icon"></li>
+                        <li class="fa fa-user ml-3 nav-icon"></li>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="container mb-3">
         <form>
             <div class="form-row">
-                <div class="form-group col-lg-3 ml-5 mt-5">
+                <div class="form-group col-md-4  mt-5">
                     <label for="exampleFormControlFile1">Profile Picture</label>
                     <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
+
             </div>
             <div class="form-row">
-                <div class="form-group  col-lg-3 ml-5 ">
+                <div class="form-group  col-md-4  ">
                     <label for="validationServer01">Full Name</label>
-                    <input type="text" class="form-control is-valid" id="validationServer01" placeholder="Full Name">
+                    <input type="text" class="form-control " id="validationServer01" placeholder="Full Name">
                 </div>
-            </div>
-            <div class="form-row">
-                <div class="form-group  col-lg-3 ml-5 ">
+                <div class="form-group  col-md-4  ">
                     <label for="email">Email</label>
                     <input type="email" class="form-control" id="email" placeholder="Email">
                 </div>
             </div>
             <div class="form-row">
-                <div class="col-12 ml-5">
+                <div class="col-12 ">
                     <label for="input">Height</label>
                 </div>
-                <div class="form-group col-xs-3 ml-5">
-                    <input type="number" class="form-control" id="input" placeholder="feet">
+                <div class="form-group col-md-4 ">
+                    <input type="number" class="form-control w-100" id="input" placeholder="feet">
                 </div>
-                <div class="form-group col-xs-3 ml-5">
+                <div class="form-group col-md-4 ">
                     <input type="number" class="form-control" id="input" placeholder="inches">
                 </div>
 
             </div>
             <div class="form-row">
-                <div class="col-3-xs-3 ml-5">
+                <div class="col-md-4 ">
                     <label for="number">Weight</label>
                     <input type="number" class="form-control" id="number" placeholder="lbs">
 
                 </div>
             </div>
-            <div class="form-row">
-                <div class="form-group col-3-lg-3 ml-5 mt-3">
-                    <label for="password">Current Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="current password">
-                </div>
-                <div class=" form-group col-3-lg-3 ml-5 mt-3">
-                    <label for="password">New Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="new password">
-                </div>
-                <div class=" form-group col-3-lg-3 ml-5 mt-3">
-                    <label for="password">Confirm Password</label>
-                    <input type="password" class="form-control" id="password" placeholder="confirm password">
-                </div>
-            </div>
-            <div class="form-row">
+            <div class="form-row pt-2">
                 <legend class="col-form-label col-sm-2 pt-0">Gender
                     <div class="col-sm-10">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1"
-                                value="option1" checked>
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
                             <label class="form-check-label" for="gridRadios1">
                                 Male
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2"
-                                value="option2">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
                             <label class="form-check-label" for="gridRadios2">
                                 Female
                             </label>
@@ -101,15 +115,13 @@
                 <legend class="col-form-label col-sm-2 pt-0">Marital Status
                     <div class="col-sm-10">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1"
-                                value="option1" checked>
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
                             <label class="form-check-label" for="gridRadios1">
                                 Married
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2"
-                                value="option2">
+                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
                             <label class="form-check-label" for="gridRadios2">
                                 Unmarried
                             </label>
@@ -118,18 +130,75 @@
                 </legend>
             </div>
             <div class="form-row">
-                <form method="post">
-                    <div class="form-group">
-                        <!-- Date input -->
-                        <label class="control-label" for="date">Date</label>
-                        <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="date" />
-                    </div>
-                    <div class="form-group">
-                        <!-- Submit button -->
-                        <button class="btn btn-primary " name="submit" type="submit">Submit</button>
-                    </div>
+                <div class="form-group">
+                    <!-- Date input -->
+                    <label class="control-label" for="date">Date</label>
+                    <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="date" />
+                </div>
             </div>
+            <button class="btn btnn-primary " name="submit" type="submit">Save Changes</button>
+        </form>
+        <hr>
+        <form>
+            <div class="form-row">
+                <div class="form-group col-6  mt-3">
+                    <label for="password">Current Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="current password">
+                </div>
+            </div>
+            <div class="form-row">
+
+                <div class=" form-group col-md-4  mt-3">
+                    <label for="password">New Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="new password">
+                </div>
+                <div class=" form-group col-md-4  mt-3">
+                    <label for="password">Confirm Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="confirm password">
+                </div>
+            </div>
+            <button class="btn btnn-primary " name="submit" type="submit">Update Password</button>
+        </form>
     </div>
-    </form>
-    </div>
+    <footer class=" text-white">
+        <div class="container">
+            <div class="pt-3">
+                <span class="navbar-brand mb-0 h1"><span id="logo-u"><b>U</b></span>fit.</span>
+            </div>
+            <div class='row pt-4'>
+                <div class="col-lg-6">
+
+                    <div class="footer-item">
+                        <li class="fas fa-envelope"></li><span>email@email.com</span>
+                    </div>
+                    <div class="footer-item">
+                        <li class="fas fa-phone"></li><span>+92-12345678-0</span>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="footer-item">
+                        <i class="fa fa-sign-in" aria-hidden="true"></i>
+                        <a href="./Landing.html" class="text-white ml-3">
+                                        Logout</a>
+                    </div>
+
+                    <div class="text-right">
+                        <i class="fab fa-facebook-square fa-2x
+                                                        pl-2" aria-hidden="true"></i>
+                        <i class="fab fa-linkedin fa-2x pl-2" aria-hidden="true"></i>
+                        <i class="fab fa-twitter-square fa-2x
+                                                        pl-2" aria-hidden="true"></i>
+                    </div>
+                </div>
+            </div>
+
+
+            <hr class="footer-hr">
+            <div class="text-center credits pb-2">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+            </div>
+
+    </footer>
 </body>
+
+</html>
