--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -9,7 +9,6 @@
     <meta charset="UTF-8">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -40,50 +39,46 @@
 
         <div class="container">
 
-            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem"><b>U</b></span>fit.</span>
+            <span class="navbar-brand mb-0 h1"><span style="color: #de1700;
+                        font-size: 2rem"><b>U</b></span>fit.</span>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 
-                        <span class="navbar-toggler-icon"></span>
+                    <span class="navbar-toggler-icon"></span>
 
-                    </button>
+                </button>
 
             <div class="collapse navbar-collapse" id="navbarText">
 
                 <div class="row w-100">
 
-                    <div class="col-md-8 ">
+                    <div class="col-md-8">
 
                         <ul class="navbar-nav">
 
                             <li class="nav-item active">
 
                                 <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
-
                             </li>
 
                             <li class="nav-item">
 
                                 <a class="nav-link" href="./Home.html">Home</a>
-
                             </li>
 
                             <li class="nav-item">
 
                                 <a class="nav-link" href="./Goals.html">Goals</a>
-
                             </li>
 
                             <li class="nav-item">
 
                                 <a class="nav-link" href="./food.html">Food</a>
-
                             </li>
 
                             <li class="nav-item">
 
                                 <a class="nav-link" href="./exercise.html">Exercise</a>
-
                             </li>
 
                         </ul>
@@ -101,7 +96,6 @@
                                 <b>Atif Mehmood</b>
 
                                 <li class="fa fa-user ml-3 nav-icon"></li>
-
                             </a>
 
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
@@ -127,198 +121,184 @@
     </nav>
 
     <section class="container">
-        <div class="container">
-            <div class="row  w-10 ">
-                <div class="col-md-6 col-sm-6">
-                    <h3>INTAKE SUMMARY</h1>
-                        <table class="table table-bordered">
-                            <tr class="table-active">
-                                <th>
-                                    <h5>Today Target</h5>
-                                </th>
-                                <th> </th>
-                            </tr>
-                            <tr>
-                                <td>Food</td>
-                                <td> 255</td>
-                            </tr>
-                            <tr>
-                                <td>Exercise</td>
-                                <td> 255</td>
-                            </tr>
-                            <tr>
-                                <td>Net</td>
-                                <td> 255</td>
-                            </tr>
-                            <tr>
-                                <td>over</td>
-                                <td> 255</td>
-                            </tr>
+        <div class="row">
+            <div class="col-md-6 col-sm-6">
+                <h3>INTAKE SUMMARY</h3>
+                <hr>
+                <table class="table table-bordered">
+                    <tr class="table-active">
+                        <th>
+                            <h5>Today Target</h5>
+                        </th>
+                        <th> </th>
+                    </tr>
+                    <tr>
+                        <td>Food</td>
+                        <td> 255</td>
+                    </tr>
+                    <tr>
+                        <td>Exercise</td>
+                        <td> 255</td>
+                    </tr>
+                    <tr>
+                        <td>Net</td>
+                        <td> 255</td>
+                    </tr>
+                    <tr>
+                        <td>over</td>
+                        <td> 255</td>
+                    </tr>
 
-                            <tr>
-                                <td>BMI</td>
-                                <td> 125.5lb</td>
-                            </tr>
-                </div>
+                    <tr>
+                        <td>BMI</td>
+                        <td> 125.5lb</td>
+                    </tr>
                 </table>
-            </div>
-            <div class="row  align-items-star">
-                <div class="col-md-6  col-sm-6">
-                    <h1 class=text-left> TODAY INTAKE</h1>
-                    <div class="container">
-                        <h6>BREAK FAST</h6>
-
-                        <table class="table table-bordered">
-                            <tr class="table-active">
-
-                                <th>Food</th>
-                                <th>Calories</th>
-                                <th>serving</th>
-                                <th class=text-center>Delete </th>
-
-                            </tr>
-                            <tr>
-                                <td>egg</td>
-                                <td> 255</td>
-                                <td> 55 </td>
-                                <td class=text-center>
-                                    <p class="fa fa-trash-o pr-2"></p>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
-
-
-
-                    <div class="container">
-                        <h6> LUNCH</h6>
-                        <table class="table table-bordered">
-                            <tr class="table-active">
-
-                                <th>Food</th>
-                                <th>Calories</th>
-                                <th>serving
-
-                                </th>
-                                <th class=text-center>Delete </th>
-
-                            </tr>
-                            <tr>
-                                <td>egg</td>
-                                <td> 255</td>
-                                <td> 55
-                                </td>
-                                <td class=text-center>
-                                    <p class="fa fa-trash-o pr-2"></p>
-                            </tr>
-
-                        </table>
-
-
-                        <div class="container">
-                            <h6> DINNER</h6>
-                            <div class="col-md-6  col-sm-6"></div>
-                            <table class="table table-bordered">
-                                <tr class="table-active">
-                                    <th>Food</th>
-                                    <th>Calories</th>
-                                    <th>serving
-                                    </th>
-                                    <th class=text-center>Delete </th>
-                                </tr>
-                                <tr>
-                                    <td>egg</td>
-                                    <td> 255</td>
-                                    <td> 55
-                                    </td>
-                                    <td class=text-center>
-                                        <p class="fa fa-trash-o pr-2"></p>
-                                </tr>
-                            </table>
-                            </tr>
-                            </table>
-                            <button type="button" class="btn btn-dark" value="LOG FOOD" button-position="center">LOG FOOD</button>
-                        </div>
-
-                    </div>
-                </div>
-                <div class="container">
-                    <div class="col-md-6   col-sm-6">
-                        <h1 align="center">TODAY EXERCISE</h1>
-                        <div class="container">
-                            <table class="table table-bordered">
-
-                                <tr class="table-active">
-                                    <th>Food</th>
-                                    <th>Calories</th>
-                                    <th class=text-center>Delete </th>
-                                </tr>
-
-                                <tr>
-
-                                    <td>push-up</td>
-                                    <td> 255</td>
-                                    <td class=text-center>
-                                        <p class="fa fa-trash-o pr-2"></p>
-                                    </td>
-
-                                </tr>
-
-
-                                <tr>
-
-
-                                    <td>running</td>
-                                    <td> 255</td>
-                                    <td class=text-center>
-                                        <p class="fa fa-trash-o pr-2"></p>
-                                    </td>
-
-                                </tr>
-                                <tr>
-                                    <td>jummpin</td>
-                                    <td> 255</td>
-                                    <td class=text-center>
-                                        <p class="fa fa-trash-o pr-2"></p>
-                                    </td>
-
-
-                                </tr>
-                                <tr>
-                                    <td>egg</td>
-                                    <td> 255</td>
-                                    <td class=text-center>
-                                        <p class="fa fa-trash-o pr-2"></p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>egg</td>
-                                    <td> 255</td>
-                                    <td class=text-center>
-                                        <p class="fa fa-trash-o pr-2"></p>
-                                    </td>
-                                </tr>
-
-                        </div>
-                        </span>
-                        </table>
-                        <button type="button" class="btn btn-dark" value="LOG FOOD" button-position="center">LOG Exercise</button>
-                    </div>
-                </div>
-
             </div>
         </div>
 
+        <div class="row align-items-star">
+            <div class="col-md-6 col-sm-6">
+                <h1 class=text-left> TODAY INTAKE</h1>
+
+                <h6>BREAK FAST</h6>
+
+                <table class="table table-bordered">
+                    <tr class="table-active">
+
+                        <th>Food</th>
+                        <th>Calories</th>
+                        <th>serving</th>
+                        <th class=text-center>Delete </th>
+
+                    </tr>
+                    <tr>
+                        <td>egg</td>
+                        <td> 255</td>
+                        <td> 55 </td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                        </td>
+                    </tr>
+                </table>
+
+                <h6> LUNCH</h6>
+                <table class="table table-bordered">
+                    <tr class="table-active">
+
+                        <th>Food</th>
+                        <th>Calories</th>
+                        <th>serving
+
+                        </th>
+                        <th class=text-center>Delete </th>
+
+                    </tr>
+                    <tr>
+                        <td>egg</td>
+                        <td> 255</td>
+                        <td> 55
+                        </td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                    </tr>
+
+                </table>
+
+
+                <h6> DINNER</h6>
+                <table class="table table-bordered">
+                    <tr class="table-active">
+                        <th>Food</th>
+                        <th>Calories</th>
+                        <th>serving
+                        </th>
+                        <th class=text-center>Delete </th>
+                    </tr>
+                    <tr>
+                        <td>egg</td>
+                        <td> 255</td>
+                        <td> 55
+                        </td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                    </tr>
+                </table>
+                </tr>
+                </table>
+                <button type="button" class="btn btn-dark" value="LOG FOOD" button-position="center">LOG FOOD</button>
+            </div>
+            <div class="col-md-6 col-sm-6">
+                <h1 class="pb-4">TODAY EXERCISE</h1>
+
+                <table class="table table-bordered">
+
+                    <tr class="table-active">
+                        <th>Food</th>
+                        <th>Calories</th>
+                        <th class=text-center>Delete </th>
+                    </tr>
+
+                    <tr>
+
+                        <td>push-up</td>
+                        <td> 255</td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                        </td>
+
+                    </tr>
+
+
+                    <tr>
+
+
+                        <td>running</td>
+                        <td> 255</td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>jummpin</td>
+                        <td> 255</td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                        </td>
+
+
+                    </tr>
+                    <tr>
+                        <td>egg</td>
+                        <td> 255</td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>egg</td>
+                        <td> 255</td>
+                        <td class=text-center>
+                            <p class="fa fa-trash-o pr-2"></p>
+                        </td>
+                    </tr>
+                </table>
+                <button type="button" class="btn btn-dark" value="LOG
+                FOOD" button-position="center">LOG Exercise</button>
+            </div>
+        </div>
+
+
     </section>
 
-    <footer class=" text-white">
+    <footer class="text-white">
 
         <div class="container">
 
             <div class="pt-3">
 
                 <span class="navbar-brand mb-0 h1"><span id="logo-u"><b>U</b></span>fit.</span>
-
             </div>
 
             <div class='row pt-4'>
@@ -330,13 +310,11 @@
                     <div class="footer-item">
 
                         <li class="fas fa-envelope"></li><span>email@email.com</span>
-
                     </div>
 
                     <div class="footer-item">
 
                         <li class="fas fa-phone"></li><span>+92-12345678-0</span>
-
                     </div>
 
                 </div>
@@ -349,7 +327,7 @@
 
                         <a href="./Landing.html" class="text-white ml-3">
 
-                                    Logout</a>
+                            Logout</a>
 
                     </div>
 
@@ -359,13 +337,13 @@
 
                         <i class="fab fa-facebook-square fa-2x
 
-                                                    pl-2" aria-hidden="true"></i>
+                            pl-2" aria-hidden="true"></i>
 
                         <i class="fab fa-linkedin fa-2x pl-2" aria-hidden="true"></i>
 
                         <i class="fab fa-twitter-square fa-2x
 
-                                                    pl-2" aria-hidden="true"></i>
+                            pl-2" aria-hidden="true"></i>
 
                     </div>
 
