--- a/Design/pages/food.html
+++ b/Design/pages/food.html
@@ -78,12 +78,17 @@
                 <table class="table">
                     <thead class="labels text-white">
                         <tr>
-                            <th>Exercise</th>
-                            <th>Amount</th>
+                            <th>Food</th>
+                            <th>Qty</th>
                             <th>Calories</th>
                         </tr>
                     </thead>
                     <tbody>
+                        <thead class="log-thead">
+                            <tr>
+                                <th colspan="3" class="">Breakfast</th>
+                            </tr>
+                        </thead>
                         <tr>
                             <th>Food 1</th>
                             <td>6</td>
@@ -94,6 +99,26 @@
                             <td>4</td>
                             <td>160</td>
                         </tr>
+                        <thead class="log-thead">
+                            <tr>
+                                <th colspan="3" class="">Lunch</th>
+                            </tr>
+                        </thead>
+                        <tr>
+                            <th>Food 3</th>
+                            <td>7.5</td>
+                            <td>335</td>
+                        </tr>
+                        <tr>
+                            <th>Food 4</th>
+                            <td>1.5</td>
+                            <td>475</td>
+                        </tr>
+                        <thead class="log-thead">
+                            <tr>
+                                <th colspan="3" class="">Dinner</th>
+                            </tr>
+                        </thead>
                         <tr>
                             <th>Food 3</th>
                             <td>7.5</td>
@@ -106,8 +131,8 @@
                         </tr>
                     </tbody>
                 </table>
-                <div class="d-flex flex-row-reverse">
-                    <button class="btn btnn-primary text-white">Add food</button>
+                <div class="d-flex flex-row-reverse mb-3">
+                    <button class="btn btnn-primary text-white ">Add food</button>
                 </div>
 
             </div>
