--- a/Design/pages/profile.html
+++ b/Design/pages/profile.html
@@ -22,36 +22,42 @@
         <div class="container">
             <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem"><b>U</b></span>fit.</span>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
+                                <span class="navbar-toggler-icon"></span>
+                            </button>
             <div class="collapse navbar-collapse" id="navbarText">
                 <div class="row w-100">
-                    <div class="col-md-10  ">
+                    <div class="col-md-8 ">
                         <ul class="navbar-nav">
                             <li class="nav-item active">
                                 <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Home</a>
+                                <a class="nav-link" href="./Home.html">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Goals</a>
+                                <a class="nav-link" href="./Goals.html">Goals</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Food</a>
+                                <a class="nav-link" href="./food.html">Food</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Exercise</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Recipes</a>
+                                <a class="nav-link" href="./exercise.html">Exercise</a>
                             </li>
                         </ul>
 
                     </div>
-                    <div class="col-md-2">
-                        <li class="fa fa-bell nav-icon"></li>
-                        <li class="fa fa-user ml-3 nav-icon"></li>
+                    <div class="col-md-4">
+                        <div class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                <b>Atif Mehmood</b>
+                                <li class="fa fa-user ml-3 nav-icon"></li>
+                            </a>
+                            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="./Landing.html">Logout</a>
+                                <a class="dropdown-item" href="./profile.html">Profile</a>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
@@ -69,11 +75,11 @@
             <div class="form-row">
                 <div class="form-group  col-md-4  ">
                     <label for="validationServer01">Full Name</label>
-                    <input type="text" class="form-control " id="validationServer01" placeholder="Full Name">
+                    <input type="text" class="form-control " id="validationServer01" placeholder="Full Name" value="Atif Mehmood">
                 </div>
                 <div class="form-group  col-md-4  ">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email">
+                    <input type="email" class="form-control" id="email" placeholder="Email" value="am02464@st.habib.edu.pk">
                 </div>
             </div>
             <div class="form-row">
@@ -81,17 +87,17 @@
                     <label for="input">Height</label>
                 </div>
                 <div class="form-group col-md-4 ">
-                    <input type="number" class="form-control w-100" id="input" placeholder="feet">
+                    <input type="number" class="form-control w-100" id="input" placeholder="feet" value="5">
                 </div>
                 <div class="form-group col-md-4 ">
-                    <input type="number" class="form-control" id="input" placeholder="inches">
+                    <input type="number" class="form-control" id="input" placeholder="inches" value="4">
                 </div>
 
             </div>
             <div class="form-row">
                 <div class="col-md-4 ">
                     <label for="number">Weight</label>
-                    <input type="number" class="form-control" id="number" placeholder="lbs">
+                    <input type="number" class="form-control" id="number" placeholder="lbs" value="110.231">
 
                 </div>
             </div>
@@ -99,14 +105,14 @@
                 <legend class="col-form-label col-sm-2 pt-0">Gender
                     <div class="col-sm-10">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                            <label class="form-check-label" for="gridRadios1">
+                            <input class="form-check-input" type="radio" name="gender" id="gender-male" value="option1" checked>
+                            <label class="form-check-label" for="gender-male">
                                 Male
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                            <label class="form-check-label" for="gridRadios2">
+                            <input class="form-check-input" type="radio" name="gender" id="gender-female" value="option2">
+                            <label class="form-check-label" for="gender-female">
                                 Female
                             </label>
                         </div>
@@ -115,14 +121,14 @@
                 <legend class="col-form-label col-sm-2 pt-0">Marital Status
                     <div class="col-sm-10">
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios1" value="option1" checked>
-                            <label class="form-check-label" for="gridRadios1">
+                            <input class="form-check-input" type="radio" name="marital-status" id="married" value="option1" checked>
+                            <label class="form-check-label" for="married">
                                 Married
                             </label>
                         </div>
                         <div class="form-check">
-                            <input class="form-check-input" type="radio" name="gridRadios" id="gridRadios2" value="option2">
-                            <label class="form-check-label" for="gridRadios2">
+                            <input class="form-check-input" type="radio" name="marital-status" id="unmarried" value="option2">
+                            <label class="form-check-label" for="unmarried">
                                 Unmarried
                             </label>
                         </div>
@@ -136,7 +142,7 @@
                     <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="date" />
                 </div>
             </div>
-            <button class="btn btnn-primary " name="submit" type="submit">Save Changes</button>
+            <button class="btn btnn-primary text-white" name="submit" type="submit">Save Changes</button>
         </form>
         <hr>
         <form>
@@ -157,7 +163,7 @@
                     <input type="password" class="form-control" id="password" placeholder="confirm password">
                 </div>
             </div>
-            <button class="btn btnn-primary " name="submit" type="submit">Update Password</button>
+            <button class="btn btnn-primary text-white" name="submit" type="submit">Update Password</button>
         </form>
     </div>
     <footer class=" text-white">
