--- a/Design/pages/Home.html
+++ b/Design/pages/Home.html
@@ -13,12 +13,6 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
 
     <link rel="stylesheet" href="../source/design.css">
@@ -41,6 +35,7 @@
 
             <span class="navbar-brand mb-0 h1"><span style="color: #de1700;
                         font-size: 2rem"><b>U</b></span>fit.</span>
+
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
 
@@ -80,14 +75,10 @@
 
                                 <a class="nav-link" href="./exercise.html">Exercise</a>
                             </li>
-
                         </ul>
-
-
-
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-md-4 text-right">
 
                         <div class="nav-item dropdown">
 
@@ -119,177 +110,162 @@
         </div>
 
     </nav>
+    <section>
+        <div class="container pt-3 pb-3">
+            <div class="row pt-2 pb-2">
+                <div class="col-md-6 col-sm-6 pt-2">
+                    <div class="card card-body">
+                        <h3 class="card-title text-center">INTAKE SUMMARY</h3>
+                        <hr>
+                        <table class="table table-sm ">
+                            <thead class="labels text-white">
+                                <tr class="">
+                                    <th>
+                                        <h6>Today's Target</h6>
+                                    </th>
+                                    <th> </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Food Calories Consumed</td>
+                                    <td> 255</td>
+                                </tr>
+                                <tr>
+                                    <td>Exercise Calories Burned</td>
+                                    <td> 255</td>
+                                </tr>
+                                <tr>
+                                    <td>Net Calories So Far </td>
+                                    <td> 255</td>
+                                </tr>
+                                <tr>
+                                    <td>Over</td>
+                                    <td> 255</td>
+                                </tr>
 
-    <section class="container">
-        <div class="row">
-            <div class="col-md-6 col-sm-6">
-                <h3>INTAKE SUMMARY</h3>
-                <hr>
-                <table class="table table-bordered">
-                    <tr class="table-active">
-                        <th>
-                            <h5>Today Target</h5>
-                        </th>
-                        <th> </th>
-                    </tr>
-                    <tr>
-                        <td>Food</td>
-                        <td> 255</td>
-                    </tr>
-                    <tr>
-                        <td>Exercise</td>
-                        <td> 255</td>
-                    </tr>
-                    <tr>
-                        <td>Net</td>
-                        <td> 255</td>
-                    </tr>
-                    <tr>
-                        <td>over</td>
-                        <td> 255</td>
-                    </tr>
 
-                    <tr>
-                        <td>BMI</td>
-                        <td> 125.5lb</td>
-                    </tr>
-                </table>
+                            </tbody>
+                        </table>
+                    </div>
+                </div>
             </div>
-        </div>
 
-        <div class="row align-items-star">
-            <div class="col-md-6 col-sm-6">
-                <h1 class=text-left> TODAY INTAKE</h1>
+            <div class="row pt-2 pb-2">
+                <div class="col-md-6 col-sm-12 pt-2">
+                    <div class="card card-body">
+                        <h3 class="card-title text-center"> TODAY'S INTAKE</h3>
+                        <hr>
+                        <table class="table table-sm">
+                            <thead class="labels text-white">
+                                <tr>
+                                    <th>Food</th>
+                                    <th>Qty</th>
+                                    <th>Calories</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <thead class="log-thead">
+                                    <tr>
+                                        <th colspan="3" class="">Breakfast</th>
+                                    </tr>
+                                </thead>
+                                <tr>
+                                    <td>Food 1</td>
+                                    <td>6</td>
+                                    <td>120</td>
+                                </tr>
+                                <tr>
+                                    <td>Food 2</td>
+                                    <td>4</td>
+                                    <td>160</td>
+                                </tr>
+                                <thead class="log-thead">
+                                    <tr>
+                                        <th colspan="3" class="">Lunch</th>
+                                    </tr>
+                                </thead>
+                                <tr>
+                                    <td>Food 3</td>
+                                    <td>7.5</td>
+                                    <td>335</td>
+                                </tr>
+                                <tr>
+                                    <td>Food 4</td>
+                                    <td>1.5</td>
+                                    <td>475</td>
+                                </tr>
+                                <thead class="log-thead">
+                                    <tr>
+                                        <th colspan="3" class="">Dinner</th>
+                                    </tr>
+                                </thead>
+                                <tr>
+                                    <td>Food 3</td>
+                                    <td>7.5</td>
+                                    <td>335</td>
+                                </tr>
+                                <tr>
+                                    <td>Food 4</td>
+                                    <td>1.5</td>
+                                    <td>475</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <button type="button" class="btn btn-sm btnn-primary text-white" value="LOG FOOD" button-position="center">LOG FOOD</button>
+                    </div>
+                </div>
+                <div class="col-md-6 col-sm-12 pt-2">
+                    <div class="card card-body">
+                        <h3 class="card-title text-center">TODAY'S EXERCISE</h3>
+                        <hr>
+                        <table class="table table-sm ">
+                            <thead class="labels text-white">
+                                <tr class="">
+                                    <th>Exercise</th>
+                                    <th>Calories Burned</th>
+                                    <th class=text-center>Delete </th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
 
-                <h6>BREAK FAST</h6>
+                                    <td>push-up</td>
+                                    <td> 255</td>
+                                    <td class=text-center>
+                                        <p class="fa fa-trash-o pr-2"></p>
+                                    </td>
 
-                <table class="table table-bordered">
-                    <tr class="table-active">
-
-                        <th>Food</th>
-                        <th>Calories</th>
-                        <th>serving</th>
-                        <th class=text-center>Delete </th>
-
-                    </tr>
-                    <tr>
-                        <td>egg</td>
-                        <td> 255</td>
-                        <td> 55 </td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                        </td>
-                    </tr>
-                </table>
-
-                <h6> LUNCH</h6>
-                <table class="table table-bordered">
-                    <tr class="table-active">
-
-                        <th>Food</th>
-                        <th>Calories</th>
-                        <th>serving
-
-                        </th>
-                        <th class=text-center>Delete </th>
-
-                    </tr>
-                    <tr>
-                        <td>egg</td>
-                        <td> 255</td>
-                        <td> 55
-                        </td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                    </tr>
-
-                </table>
+                                </tr>
 
 
-                <h6> DINNER</h6>
-                <table class="table table-bordered">
-                    <tr class="table-active">
-                        <th>Food</th>
-                        <th>Calories</th>
-                        <th>serving
-                        </th>
-                        <th class=text-center>Delete </th>
-                    </tr>
-                    <tr>
-                        <td>egg</td>
-                        <td> 255</td>
-                        <td> 55
-                        </td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                    </tr>
-                </table>
-                </tr>
-                </table>
-                <button type="button" class="btn btn-dark" value="LOG FOOD" button-position="center">LOG FOOD</button>
+                                <tr>
+
+
+                                    <td>running</td>
+                                    <td> 255</td>
+                                    <td class=text-center>
+                                        <p class="fa fa-trash-o pr-2"></p>
+                                    </td>
+
+                                </tr>
+                                <tr>
+                                    <td>jummpin</td>
+                                    <td> 255</td>
+                                    <td class=text-center>
+                                        <p class="fa fa-trash-o pr-2"></p>
+                                    </td>
+
+
+                                </tr>
+
+                            </tbody>
+                        </table>
+                        <button type="button" class="btn btn-sm btnn-primary text-white" value="LOG
+                FOOD" button-position="center">LOG EXERCISE</button>
+                    </div>
+                </div>
             </div>
-            <div class="col-md-6 col-sm-6">
-                <h1 class="pb-4">TODAY EXERCISE</h1>
-
-                <table class="table table-bordered">
-
-                    <tr class="table-active">
-                        <th>Food</th>
-                        <th>Calories</th>
-                        <th class=text-center>Delete </th>
-                    </tr>
-
-                    <tr>
-
-                        <td>push-up</td>
-                        <td> 255</td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                        </td>
-
-                    </tr>
-
-
-                    <tr>
-
-
-                        <td>running</td>
-                        <td> 255</td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                        </td>
-
-                    </tr>
-                    <tr>
-                        <td>jummpin</td>
-                        <td> 255</td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                        </td>
-
-
-                    </tr>
-                    <tr>
-                        <td>egg</td>
-                        <td> 255</td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td>egg</td>
-                        <td> 255</td>
-                        <td class=text-center>
-                            <p class="fa fa-trash-o pr-2"></p>
-                        </td>
-                    </tr>
-                </table>
-                <button type="button" class="btn btn-dark" value="LOG
-                FOOD" button-position="center">LOG Exercise</button>
-            </div>
-        </div>
-
-
     </section>
 
     <footer class="text-white">
@@ -366,6 +342,9 @@
 
 
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </body>
 
