--- a/Design/pages/exercise.html
+++ b/Design/pages/exercise.html
@@ -6,9 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
     <link rel="stylesheet" href="../source/design.css">
 
@@ -19,49 +16,85 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
         <div class="container">
-            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem"><b>U</b></span>fit.</span>
+
+            <span class="navbar-brand mb-0 h1"><span style="color: #de1700;
+                                font-size: 2rem"><b>U</b></span>fit.</span>
+
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
+        
+                            <span class="navbar-toggler-icon"></span>
+        
+                        </button>
+
             <div class="collapse navbar-collapse" id="navbarText">
+
                 <div class="row w-100">
-                    <div class="col-md-8 ">
+
+                    <div class="col-md-8">
+
                         <ul class="navbar-nav">
+
                             <li class="nav-item active">
+
                                 <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./Home.html">Home</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./Goals.html">Goals</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./food.html">Food</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./exercise.html">Exercise</a>
                             </li>
                         </ul>
-
                     </div>
-                    <div class="col-md-4">
+
+                    <div class="col-md-4 text-right">
+
                         <div class="nav-item dropdown">
+
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
                                 <b>Atif Mehmood</b>
+
                                 <li class="fa fa-user ml-3 nav-icon"></li>
                             </a>
+
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+
                                 <a class="dropdown-item" href="./Landing.html">Logout</a>
+
                                 <a class="dropdown-item" href="./profile.html">Profile</a>
+
                             </div>
+
                         </div>
 
+
+
                     </div>
+
                 </div>
+
             </div>
+
         </div>
+
     </nav>
     <section class="container mb-2">
         <div class='row pt-4 text-center'>
@@ -74,39 +107,40 @@
                 <input type="date" class="form-control">
             </div>
             <div class="col-lg-12">
+
                 <table class="table">
                     <thead class="labels text-white">
                         <tr>
                             <th>Exercise</th>
-                            <th>Amount</th>
-                            <th>Calories</th>
+                            <th>Duration (hr.)</th>
+                            <th>Calories Bruned</th>
                         </tr>
                     </thead>
                     <tbody>
                         <tr>
-                            <th>Food 1</th>
+                            <th>Exercise 1</th>
                             <td>6</td>
                             <td>120</td>
                         </tr>
                         <tr>
-                            <th>Food 2</th>
+                            <th>Exercise 2</th>
                             <td>4</td>
                             <td>160</td>
                         </tr>
                         <tr>
-                            <th>Food 3</th>
+                            <th>Exercise 3</th>
                             <td>7.5</td>
                             <td>335</td>
                         </tr>
                         <tr>
-                            <th>Food 4</th>
+                            <th>Exercise 4</th>
                             <td>1.5</td>
                             <td>475</td>
                         </tr>
                     </tbody>
                 </table>
                 <div class="d-flex flex-row-reverse">
-                    <button class="btn btnn-primary ">Add food</button>
+                    <button class="btn btnn-primary text-white ">Add Exercise</button>
                 </div>
 
             </div>
@@ -153,5 +187,8 @@
             </div>
 
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 </html>
