--- a/Design/pages/profile.html
+++ b/Design/pages/profile.html
@@ -7,61 +7,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/87ad30c39c.js"></script>
     <link rel="stylesheet" href="../source/design.css">
     <script src="design.js"></script>
-    <title>Home</title>
+    <title>Profile</title>
 
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
         <div class="container">
-            <span class="navbar-brand mb-0 h1 "><span style="color: #de1700; font-size: 2rem"><b>U</b></span>fit.</span>
+
+            <span class="navbar-brand mb-0 h1"><span style="color: #de1700;
+                                font-size: 2rem"><b>U</b></span>fit.</span>
+
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
+        
+                            <span class="navbar-toggler-icon"></span>
+        
+                        </button>
+
             <div class="collapse navbar-collapse" id="navbarText">
+
                 <div class="row w-100">
-                    <div class="col-md-8 ">
+
+                    <div class="col-md-8">
+
                         <ul class="navbar-nav">
+
                             <li class="nav-item active">
+
                                 <a class="nav-link" href="#"> <span class="sr-only">(current)</span></a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./Home.html">Home</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./Goals.html">Goals</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./food.html">Food</a>
                             </li>
+
                             <li class="nav-item">
+
                                 <a class="nav-link" href="./exercise.html">Exercise</a>
                             </li>
                         </ul>
-
                     </div>
-                    <div class="col-md-4">
+
+                    <div class="col-md-4 text-right">
+
                         <div class="nav-item dropdown">
+
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+
                                 <b>Atif Mehmood</b>
+
                                 <li class="fa fa-user ml-3 nav-icon"></li>
                             </a>
+
                             <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+
                                 <a class="dropdown-item" href="./Landing.html">Logout</a>
+
                                 <a class="dropdown-item" href="./profile.html">Profile</a>
+
                             </div>
+
                         </div>
 
+
+
                     </div>
+
                 </div>
+
             </div>
+
         </div>
+
     </nav>
     <div class="container mb-3">
         <form>
@@ -70,39 +103,42 @@
                     <label for="exampleFormControlFile1">Profile Picture</label>
                     <input type="file" class="form-control-file" id="exampleFormControlFile1">
                 </div>
-
             </div>
             <div class="form-row">
                 <div class="form-group  col-md-4  ">
-                    <label for="validationServer01">Full Name</label>
-                    <input type="text" class="form-control " id="validationServer01" placeholder="Full Name" value="Atif Mehmood">
+                    <label for="full-name">Full Name</label>
+                    <input type="text" class="form-control" name="fullName" id="full-name" placeholder="Full Name" value="Atif Mehmood">
                 </div>
                 <div class="form-group  col-md-4  ">
                     <label for="email">Email</label>
-                    <input type="email" class="form-control" id="email" placeholder="Email" value="am02464@st.habib.edu.pk">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Email" value="am02464@st.habib.edu.pk">
                 </div>
             </div>
             <div class="form-row">
                 <div class="col-12 ">
-                    <label for="input">Height</label>
+                    <label for="input">Height (Feet, Inch.)</label>
                 </div>
                 <div class="form-group col-md-4 ">
-                    <input type="number" class="form-control w-100" id="input" placeholder="feet" value="5">
+                    <input type="number" name="heightFeet" class="form-control w-100" id="input" placeholder="feet" value="5">
                 </div>
                 <div class="form-group col-md-4 ">
-                    <input type="number" class="form-control" id="input" placeholder="inches" value="4">
+                    <input type="number" name="heightInches" class="form-control" id="input" placeholder="inches" value="4">
                 </div>
 
             </div>
             <div class="form-row">
+                <div class="col-md-4">
+                    <label class="control-label" for="date">Date of Birth</label>
+                    <input class="form-control" name="dateOfBirth" id="date" name="date" placeholder="MM/DD/YYY" type="date" />
+                </div>
                 <div class="col-md-4 ">
                     <label for="number">Weight</label>
-                    <input type="number" class="form-control" id="number" placeholder="lbs" value="110.231">
-
+                    <input type="number" class="form-control" name="wight" id="number" placeholder="lbs" value="110.231">
                 </div>
+
             </div>
             <div class="form-row pt-2">
-                <legend class="col-form-label col-sm-2 pt-0">Gender
+                <legend class="col-form-label col-md-4 pt-0">Gender
                     <div class="col-sm-10">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="gender" id="gender-male" value="option1" checked>
@@ -118,7 +154,7 @@
                         </div>
                     </div>
                 </legend>
-                <legend class="col-form-label col-sm-2 pt-0">Marital Status
+                <legend class="col-form-label col-md-4 pt-0">Marital Status
                     <div class="col-sm-10">
                         <div class="form-check">
                             <input class="form-check-input" type="radio" name="marital-status" id="married" value="option1" checked>
@@ -136,18 +172,14 @@
                 </legend>
             </div>
             <div class="form-row">
-                <div class="form-group">
-                    <!-- Date input -->
-                    <label class="control-label" for="date">Date</label>
-                    <input class="form-control" id="date" name="date" placeholder="MM/DD/YYY" type="date" />
-                </div>
+
             </div>
             <button class="btn btnn-primary text-white" name="submit" type="submit">Save Changes</button>
         </form>
         <hr>
         <form>
             <div class="form-row">
-                <div class="form-group col-6  mt-3">
+                <div class="form-group col-md-8  mt-3">
                     <label for="password">Current Password</label>
                     <input type="password" class="form-control" id="password" placeholder="current password">
                 </div>
@@ -205,6 +237,11 @@
             </div>
 
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 </body>
 
 </html>
