Goal Logger added on Goal and Goal Details Page

--- a/Design/pages/Goals.html
+++ b/Design/pages/Goals.html
@@ -166,8 +166,7 @@
                     </table>
                     <div class="d-flex">
                         <button class="btn btnn-primary">Add Goal</button>
-                        <button class="btn ml-auto btnn-primary" type="button" data-toggle="modal"
-                            data-target="#editGoalModal">Edit Goal</button>
+                        <button class="btn ml-auto btnn-primary" type="button" data-toggle="modal" data-target="#editGoalModal">Edit Goal</button>
                     </div>
                 </div>
                 <form action="">
@@ -176,8 +175,6 @@
                         <input type="number" class="form-control mr-1">
                         <button class="btn btnn-primary text-white">Log</button>
                     </div>
-
-
                 </form>
             </div>
             <div class="col-lg-8 text-center">Graph goes here</div>
